fixed spacing I just messed with

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ width: 70%;
 
 .line-2 {
   line-height: 1.5;
+  text-align: center;
 }
 /* HEADER */
 
